# mlir-tutorial

./: .envrc  .gitignore  .gitmodules  README.md  flake.nix
mlir-toy/: .clang-tidy  .nvim.lua  CMakeLists.txt  cmake_uninstall.cmake.in
mlir-toy/include/Midend/: MLIRGen.hpp
mlir-toy/include/Parser/: Lexer.hpp  Parser.hpp
mlir-toy/include/Toy/: AST.hpp  CMakeLists.txt  ToyDialect.h  ToyDialect.td  ToyOps.h  ToyOps.td
mlir-toy/include/parser/: AST.hpp  Lexer.hpp  Parser.hpp
mlir-toy/src/: CMakeLists.txt  main.cpp
mlir-toy/src/Dialect/: CMakeLists.txt  ToyDialect.cpp
mlir-toy/src/Midend/: CMakeLists.txt  MLIRGen.cpp
mlir-toy/src/Utils/: ASTDumper.cpp  CMakeLists.txt
mlir-toy/src/parser/: CMakeLists.txt  Dumper.cpp
mlir-toy/test/: CMakeLists.txt  ast.toy  codegen.toy  invalid.mlir  run_test.sh  scalar.toy
